<resources>
<string name="app_name">UIGestureCollect-1</string>
<string name="sample_action">Subject# </string>
<string name="button_next">Next</string>
<string name="name_hint">Enter name(in lower case)</string>
<string name="name_string">name</string>
<string name="number_hint">Enter number string 1234567890</string>
<string name="number_string">1234567890</string>
<string name="qwerty_hint">Enter string zxcvbnm(in lowercase)</string>
<string name="qwerty_string">qwertyuiop</string>
<string name="subject_hint">Enter subject number(top right corner)</string>
<string name="subject_number">Subject #</string>
<string name="title_activity_text">TextActivity</string>
<string name="hello_world">Hello world!</string>
<string name="action_settings">Settings</string>
    <string name="text">Sample Paragraph: Lorem ipsum dolor sit amet,
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc consectetur volutpat eros sit amet pellentesque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce sit amet dapibus sem. Nam a dapibus nisi. Pellentesque laoreet lobortis sagittis. Nam finibus elementum pulvinar. Etiam cursus, tellus sit amet varius elementum, erat lectus vestibulum ante, nec laoreet urna erat et augue.

    Fusce a sem et enim convallis aliquet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam facilisis mi a ligula vehicula, a mollis massa mollis. Cras dapibus neque vitae lacus porta dignissim. Vestibulum fringilla quis nisi ullamcorper consectetur. Nunc nunc justo, imperdiet in iaculis malesuada, rutrum sed felis. Phasellus in sodales est, vel fermentum arcu. Aliquam quis luctus sem. Aliquam viverra tristique tempus. Proin non fermentum ex, sed imperdiet turpis. Proin feugiat porta odio a tempor.

    Sed dapibus sem vel rutrum euismod. Morbi leo tellus, euismod eget vehicula non, convallis id erat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam imperdiet nibh sit amet arcu sollicitudin, vel sodales ipsum fringilla. Quisque a turpis eu enim tincidunt placerat. Ut eget lectus imperdiet ligula fermentum feugiat. Ut et augue dolor. Donec aliquam blandit metus non elementum. Sed ut porta erat. Aliquam quis tellus a lacus pretium elementum.</string>
<string name="title_activity_checkbox">CheckboxActivity</string>
<string name="checkbox_question1">CheckboxActivity: Question 1 ?</string>
<string name="checkbox_answer">answer</string>
<string name="checkbox_question2">CheckboxActivity: Question 2 ?</string>
<string name="checkbox_question3">CheckboxActivity: Question 3 ?</string>
    <string name="checkbox_question3_app1">1. Which of the following is true ? </string>
    <string name="checkbox_question3_app2">1. Which of the following days start with a \'T\' ? </string>
<string name="checkbox_answer31">answer31</string>
    <string name="checkbox_answer31_app1">2 &lt; 4 ?</string>
    <string name="checkbox_answer31_app2">Tuesday</string>
<string name="checkbox_answer32">answer32</string>
    <string name="checkbox_answer32_app1"> 4 &lt; 6 ?</string>
    <string name="checkbox_answer32_app2">Thursday</string>
<string name="checkbox_question4">CheckboxActivity: Question 4 ?</string>
    <string name="checkbox_question4_app1">2. Which of the following is true ?</string>
<string name="checkbox_answer41">answer41</string>
    <string name="checkbox_answer41_app1">2 &gt; 6 ?</string>
<string name="checkbox_answer42">answer42</string>
    <string name="checkbox_answer42_app1">4 &lt; 6</string>
<string name="checkbox_question5">CheckboxActivity: Question 5 ?</string>
    <string name="checkbox_question5_app1">3. Which of the following is true ?</string>
<string name="checkbox_answer51">answer51</string>
    <string name="checkbox_answer51_app1">10 &lt; 9</string>
<string name="checkbox_answer52">answer52</string>
    <string name="checkbox_answer52_app1">9 &lt; 10</string>
<string name="checkbox_question6">CheckboxActivity: Question 6 ?</string>
    <string name="checkbox_question6_app1">4. Which of the following is true ?</string>
<string name="checkbox_answer61">answer61</string>
    <string name="checkbox_answer61_app1">9 &lt; 11</string>
<string name="checkbox_answer62">answer62</string>
    <string name="checkbox_answer62_app1">11 &lt; 9</string>
<string name="checkbox_question7">CheckboxActivity: Question 7 ?</string>
    <string name="checkbox_question7_app1">5. Which of the following is true ?</string>
<string name="checkbox_answer71">answer71</string>
    <string name="checkbox_answer71_app1">11 &lt; 10</string>
<string name="checkbox_answer72">answer72</string>
    <string name="checkbox_answer72_app1">9 &lt; 11</string>
<string name="checkbox_question8">CheckboxActivity: Question 8 ?</string>
    <string name="checkbox_question8_app1">6. Which of the following is true ?</string>
<string name="checkbox_answer81">answer81</string>
    <string name="checkbox_answer81_app1">9 &lt; 10</string>
<string name="checkbox_answer82">answer82</string>
    <string name="checkbox_answer82_app1">10 &lt; 11</string>
<string name="checkbox_question9">CheckboxActivity: Question 9 ?</string>
    <string name="checkbox_question9_app1">7. Which of the following is true ?</string>
<string name="checkbox_answer91">answer91</string>
    <string name="checkbox_answer91_app1">2 &lt; 9 </string>
<string name="checkbox_answer92">answer92</string>
    <string name="checkbox_answer92_app1">9 &lt; 7</string>
<string name="checkbox_question10">CheckboxActivity: Question 10 ?</string>
    <string name="checkbox_question10_app1">8. Which of the following is true ?</string>
<string name="checkbox_answer101">answer101</string>
    <string name="checkbox_answer101_app1">5 &lt; 7</string>
<string name="checkbox_answer102">answer102</string>
    <string name="checkbox_answer102_app1">3 &lt; 7</string>
<string name="checkbox_question11">CheckboxActivity: Question 11 ?</string>
    <string name="checkbox_question11_app1">9. Which of the following is true ?</string>
<string name="checkbox_answer111">answer111</string>
    <string name="checkbox_answer111_app1">4 &lt; 6</string>
<string name="checkbox_answer112">answer112</string>
    <string name="checkbox_answer112_app1">6 &lt; 4</string>
<string name="checkbox_question12">CheckboxActivity: Question 12 ?</string>
    <string name="checkbox_question12_app1">10. Which of the following is true ?</string>
<string name="checkbox_answer121">answer121</string>
    <string name="checkbox_answer121_app1">10 &lt; 11</string>
<string name="checkbox_answer122">answer122</string>
    <string name="checkbox_answer122_app1">9 &lt; 10</string>
<string name="title_activity_radiobutton">RadiobuttonActivity</string>
<string name="RadioButton_question1">RadiobuttonActivity: Question 1 ?</string>
    <string name="RadioButton_question1_app1">1. Which of these is colored blue ?</string>
<string name="RadioButton_answer11">radiobutton_answer11</string>
    <string name="RadioButton_answer11_app1">red</string>
<string name="RadioButton_answer12">radiobutton_answer12</string>
    <string name="RadioButton_answer12_app1">blue</string>
<string name="RadioButton_question2">RadiobuttonActivity: Question 2 ?</string>
    <string name="RadioButton_question2_app1">2. Is 2 even or odd ?</string>
<string name="RadioButton_answer21">radiobutton_answer21</string>
    <string name="RadioButton_answer21_app1">even</string>
<string name="RadioButton_answer22">radiobutton_answer22</string>
    <string name="RadioButton_answer22_app1">odd</string>
<string name="RadioButton_question3">RadiobuttonActivity: Question 3 ?</string>
    <string name="RadioButton_question3_app1">3. Which of these is colored green ?</string>
<string name="RadioButton_answer31">radiobutton_answer31</string>
    <string name="RadioButton_answer31_app1">red</string>
<string name="RadioButton_answer32">radiobutton_answer32</string>
    <string name="RadioButton_answer32_app1">red</string>
<string name="RadioButton_question4">RadiobuttonActivity: Question 4 ?</string>
    <string name="RadioButton_question4_app1">4. Is 4 divisible by 2 ?</string>
<string name="RadioButton_answer41">radiobutton_answer41</string>
    <string name="RadioButton_answer41_app1">yes</string>
<string name="RadioButton_answer42">radiobutton_answer42</string>
    <string name="RadioButton_answer42_app1">no</string>
<string name="RadioButton_question5">RadiobuttonActivity: Question 5 ?</string>
    <string name="RadioButton_question5_app1">5. Which of these is colored blue ?</string>
<string name="RadioButton_answer51">radiobutton_answer51</string>
    <string name="RadioButton_answer51_app1">blue</string>
<string name="RadioButton_answer52">radiobutton_answer52</string>
    <string name="RadioButton_answer52_app1">blue</string>
<string name="RadioButton_question6">RadiobuttonActivity: Question 6 ?</string>
    <string name="RadioButton_question6_app1">6. Which of these is colored yellow ?</string>
<string name="RadioButton_answer61">radiobutton_answer61</string>
    <string name="RadioButton_answer61_app1">blue</string>
<string name="RadioButton_answer62">radiobutton_answer62</string>
    <string name="RadioButton_answer62_app1">yellow</string>
<string name="RadioButton_question7">RadiobuttonActivity: Question 7 ?</string>
    <string name="RadioButton_question7_app1">7. Which of these is colored blue ?</string>
<string name="RadioButton_answer71">radiobutton_answer71</string>
    <string name="RadioButton_answer71_app1">red</string>
<string name="RadioButton_answer72">radiobutton_answer72</string>
    <string name="RadioButton_answer72_app1">blue</string>
<string name="RadioButton_question8">RadiobuttonActivity: Question 8 ?</string>
    <string name="RadioButton_question8_app1">8. 4 + 1 =  ?</string>
<string name="RadioButton_answer81">radiobutton_answer81</string>
    <string name="RadioButton_answer81_app1">8</string>
<string name="RadioButton_answer82">radiobutton_answer82</string>
    <string name="RadioButton_answer82_app1">5</string>
<string name="RadioButton_question9">RadiobuttonActivity: Question 9 ?</string>
<string name="switch_answer_on">yes</string>
<string name="switch_answer_off">no</string>
    <string name="Switch_question1_app1">1. Is it past 3 PM ?</string>
    <string name="Switch_question2_app1">2. Does January follow December ?</string>
    <string name="Switch_question3_app1">3. Does your first name begin with an \'M\' ?</string>
    <string name="Switch_question4_app1">4. Does your last name begin with an \'S\' ?</string>
    <string name="Switch_question5_app1">5. Are you aware of prime numbers ?</string>
    <string name="Switch_question6_app1">6. Do all computers have a keyboard ?</string>
    <string name="Switch_question7_app1">7. Is 5.9 &gt; 5.8 ?</string>
    <string name="Switch_question8_app1">8. Does March precede April ?</string>
    <string name="Switch_question9_app1">9. Does 1 foot equal 12 inches ?</string>
    <string name="Switch_question10_app1">10. Does 10*10 = 100 ?</string>
    <string name="Switch_question11_app1">11. Does Switch begin with an \'S\' ?</string>
    <string name="Switch_question12_app1">12. Does 12 AM mean noon ?</string>
    <string name="Switch_question13_app1">13. Is chocolate a plant ?</string>
    <string name="Switch_question14_app1">14. Is October preceded by September ?</string>
    <string name="Switch_question15_app1">15. Is this text black ?</string>
    <string name="Switch_question16_app1">16. Does 3/2 = 1.5 ?</string>
    <string name="Switch_question17_app1">17. Does the sun rise in the East ?</string>
    <string name="Switch_question18_app1">18. Does it usually snow in January ?</string>
    <string name="Switch_question19_app1">19. Does an evening start at 4 PM ?</string>
    <string name="Switch_question20_app1">20. Does MSU stand for Michigan State University ?</string>
</resources>